--- a/public/static/admin/lib/xadmin/index.html
+++ b/public/static/admin/lib/xadmin/index.html
@@ -291,37 +291,37 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('滑块验证','https://fly.layui.com/extend/sliderVerify/')" target="">
+                                <a onclick="xadmin.add_tab('滑块验证','https://dev.layuion.com/extend/sliderVerify/')" target="">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>滑块验证</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('富文本编辑器','https://fly.layui.com/extend/layedit/')">
+                                <a onclick="xadmin.add_tab('富文本编辑器','https://dev.layuion.com/extend/layedit/')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>富文本编辑器</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('eleTree 树组件','https://fly.layui.com/extend/eleTree/')">
+                                <a onclick="xadmin.add_tab('eleTree 树组件','https://dev.layuion.com/extend/eleTree/')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>eleTree 树组件</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('图片截取','https://fly.layui.com/extend/croppers/')">
+                                <a onclick="xadmin.add_tab('图片截取','https://dev.layuion.com/extend/croppers/')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>图片截取</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('formSelects 4.x 多选框','https://fly.layui.com/extend/formSelects/')">
+                                <a onclick="xadmin.add_tab('formSelects 4.x 多选框','https://dev.layuion.com/extend/formSelects/')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>formSelects 4.x 多选框</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('Magnifier 放大镜','https://fly.layui.com/extend/Magnifier/')">
+                                <a onclick="xadmin.add_tab('Magnifier 放大镜','https://dev.layuion.com/extend/Magnifier/')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>Magnifier 放大镜</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('notice 通知控件','https://fly.layui.com/extend/notice/')">
+                                <a onclick="xadmin.add_tab('notice 通知控件','https://dev.layuion.com/extend/notice/')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>notice 通知控件</cite></a>
                             </li>
