--- a/public/static/admin/lib/xadmin/admin-add.html
+++ b/public/static/admin/lib/xadmin/admin-add.html
@@ -118,8 +118,7 @@
                 });
 
                 //监听提交
-                form.on('submit(add)',
-                function(data) {
+                form.on('submit(add)', function(data) {
                     console.log(data);
                     //发异步，把数据提交给php
                     layer.alert("增加成功", {
