--- a/app/admin/view-akali/article/update.html
+++ b/app/admin/view-akali/article/update.html
@@ -152,6 +152,7 @@
         form.val("form", data);
         form.val("form", {
             'article_cate_id': data.cate.id,
+            'content': HtmlUtil.htmlDecode(data.desc.content)
         });
         // 图片赋值
         $('#upload-preview').attr('src', data.image);
@@ -161,8 +162,6 @@
         layui_ajax_update(form, '/article');
 
     });
-
-    $('#container').html(HtmlUtil.htmlDecode(data.desc.content));
 
 </script>
 {/block}
