--- a/app/admin/view-akali/platform/save.html
+++ b/app/admin/view-akali/platform/save.html
@@ -1,5 +1,5 @@
 {extend name="public/base_layui" /}
-{block name="title"}产品保存{/block}
+{block name="title"}平台保存{/block}
 {block name="load"}
 <!-- css -->
 <!-- js -->
@@ -12,19 +12,19 @@
             <table class="layui-table" lay-size="lg" lay-skin="line">
                 <thead>
                     <tr>
-                        <th colspan="2">产品更新</th>
+                        <th colspan="2">平台添加</th>
                     </tr>
                 </thead>
                 <tbody>
 
                     <tr>
-                        <td width="150" align="right"><strong>产品标题：</strong></td>
+                        <td width="150" align="right"><strong>平台标题：</strong></td>
                         <td>
                             <div class="layui-input-inline">
-                                <input class="layui-input" type="text" name="title" placeholder="产品名称" style="width: 400px;">
+                                <input class="layui-input" type="text" name="title" placeholder="平台名称" style="width: 400px;">
                             </div>
                             <div class="layui-input-inline">
-                                <span style="color: red;">*</span> 将会成为产品唯一标题
+                                <span style="color: red;">*</span> 将会成为平台唯一标题
                             </div>
                         </td>
                     </tr>
@@ -37,6 +37,14 @@
                                     <img class="layui-upload-img" id="upload-preview">
                                     <input type="hidden" name="image">
                                 </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="150" align="right"><strong>排序：</strong></td>
+                        <td>
+                            <div class="layui-input-inline">
+                                <input class="layui-input" type="text" name="sort" placeholder="排序">
                             </div>
                         </td>
                     </tr>
@@ -72,7 +80,6 @@
                         <td>
                             <div class="layui-input-inline">
                                 <button class="layui-btn" lay-submit lay-filter="formSubmit">立即提交</button>
-                                <input type="hidden" name="id">
                             </div>
                         </td>
                     </tr>
@@ -84,28 +91,20 @@
 
 <script>
 
-    // 获取文章数据
-    let product = ajax_read('/product');
-    
     layui.use(['form', 'layer', 'upload', 'jquery'], function () {
         $ = layui.jquery;
         var form = layui.form,
-            upload = layui.upload;
+            upload = layui.upload,
+            layer = layui.layer;
 
-        // 赋值
-        form.val("form", product);
-        form.val("form", {
-            'content': HtmlUtil.htmlDecode(product.desc.content)
-        });
-        // 图片赋值
-        $('#upload-preview').attr('src', product.image);
-        // 上传图片
+        // 建立编辑器
+        // layedit.build('layedit');
+        // 封面
         layui_upload_image(upload);
-        // 更新数据
-        layui_ajax_update(form, '/product');
+        // 保存
+        layui_ajax_save(form, '/platform');
 
     });
 
-    $('#container').html(HtmlUtil.htmlDecode(product.desc.content));
 </script>
 {/block}
